hard-gists/985060/run.log
=== Docker Run Log for 985060 ===
Started at: Mi 29. Okt 18:33:50 CET 2025

[2025-10-29 18:33:50] START: Running container for 985060
[2025-10-29 18:33:50] SUCCESS: Container 1d9a67821fde465822542a610133c67ab1bb3580a6af45f70aa6163c97c0a20a started for 985060
=== Container logs for 985060 ===
  File "/snippet.py", line 35
    print lat_deg
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 985060 ===
[2025-10-29 18:33:52] INFO: Container 1d9a67821fde465822542a610133c67ab1bb3580a6af45f70aa6163c97c0a20a has stopped
